<resources>
    <string name="app_name">MyPlaces</string>
    <string name="facebook_app_id">802843803472902</string>
    <string name="fb_login_protocol_scheme">fb802843803472902</string>
    <string name="google_maps_api_key">AIzaSyDOffv_H8HtXT7Ett42eQSdC8g-RBarTc8</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_radar">Radar</string>
    <string name="title_list">Lista</string>
    <string name="title_profile">Perfil</string>
    <string name="error_401">Usuário não autorizado</string>
    <string name="error_400_generic">Erro não tratado</string>
    <string name="error_500_generic">Erro do servidor</string>
    <string name="categories">Categorias</string>
    <string name="cancel">Cancelar</string>
    <string name="local_name">Restaurante Bode do Nó</string>
    <string name="local_description">R. São Miguel, 1401. Afogados. Recife, PE. 50770720</string>
    <string name="trace_route">Traçar Rota</string>
</resources>
