<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_radar">

    <fragment
        android:id="@+id/navigation_radar"
        android:name="com.phmb.myplaces.ui.radar.RadarFragment"
        android:label="@string/title_radar" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.phmb.myplaces.ui.list.ListFragment"
        android:label="@string/title_list" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.phmb.myplaces.ui.profile.ProfileFragment"
        android:label="@string/title_profile" />
</navigation>