<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:gravity="center"
    android:layout_height="match_parent">

    <TextView android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/local_name"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        />

    <TextView android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/title"
        android:layout_gravity="center_horizontal"
        android:text="@string/local_description"
        android:background="@color/white"
        android:textColor="@color/gray_light"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/trace_route"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:id="@+id/trace_route" />

    </LinearLayout>


</RelativeLayout>